--- a/style.css
+++ b/style.css
@@ -20,16 +20,13 @@
 
 body {
   height: 100vh;
+  font-family: RussoOne;
+  color: white;
 }
 
 a {
   text-decoration: none;
   color: inherit;
-}
-
-.wrapper {
-  font-family: RussoOne;
-  color: white;
 }
 
 .header {
@@ -44,7 +41,8 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 20px;
+  padding: 6%;
+  height: 20%;
 }
 
 .header__buttons {
@@ -79,15 +77,25 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  height: 60%;
 }
 
 .content__menu {
   width: 20%;
   background-color: var(--menuBGC);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .content__menu .menu__item {
-  padding: 10%;
+  padding: 5%;
   text-align: center;
   white-space: nowrap;
   cursor: pointer;
@@ -108,7 +116,7 @@ a {
   display: grid;
   place-items: center;
   color: var(--headerBGC);
-  padding: 20px;
+  padding: 4%;
 }
 
 .content__info {
@@ -118,7 +126,7 @@ a {
   place-items: center;
   text-align: center;
   color: var(--headerBGC);
-  padding: 20px;
+  padding: 4%;
 }
 
 .content__info a {
@@ -173,7 +181,8 @@ a {
 
 .footer {
   background-color: var(--headerBGC);
-  padding: 40px;
+  padding: 10%;
+  height: 20%;
 }
 
 @-webkit-keyframes arrow {
