--- a/style.scss
+++ b/style.scss
@@ -34,8 +34,8 @@ a {
     background-color: var(--headerBGC);
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    padding: 6%;
     height: 20%;
 
     &__buttons {
